tests/machine/x/c/group_by_having.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/group_by_having.c:27:3: error: unknown type name ‘list_int’
   27 |   list_int *data;
      |   ^~~~~~~~
/workspace/mochi/tests/machine/x/c/group_by_having.c: In function ‘list_list_int_create’:
/workspace/mochi/tests/machine/x/c/group_by_having.c:32:13: error: ‘list_int’ undeclared (first use in this function); did you mean ‘list_string’?
   32 |   l.data = (list_int *)malloc(sizeof(list_int) * len);
      |             ^~~~~~~~
      |             list_string
/workspace/mochi/tests/machine/x/c/group_by_having.c:32:13: note: each undeclared identifier is reported only once for each function it appears in
/workspace/mochi/tests/machine/x/c/group_by_having.c:32:23: error: expected expression before ‘)’ token
   32 |   l.data = (list_int *)malloc(sizeof(list_int) * len);
      |                       ^
/workspace/mochi/tests/machine/x/c/group_by_having.c: At top level:
/workspace/mochi/tests/machine/x/c/group_by_having.c:38:28: error: unknown type name ‘list_int’; did you mean ‘list_string’?
   38 | static void _json_list_int(list_int v) {
      |                            ^~~~~~~~
      |                            list_string
/workspace/mochi/tests/machine/x/c/group_by_having.c: In function ‘_json_list_list_int’:
/workspace/mochi/tests/machine/x/c/group_by_having.c:70:5: warning: implicit declaration of function ‘_json_list_int’; did you mean ‘_json_list_string’? [-Wimplicit-function-declaration]
   70 |     _json_list_int(v.data[i]);
      |     ^~~~~~~~~~~~~~
      |     _json_list_string
/workspace/mochi/tests/machine/x/c/group_by_having.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/group_by_having.c:114:22: error: invalid initializer
  114 |   list_bigItem big = 0;
      |                      ^
/workspace/mochi/tests/machine/x/c/group_by_having.c:115:13: error: incompatible type for argument 1 of ‘_json_int’
  115 |   _json_int(big);
      |             ^~~
      |             |
      |             list_bigItem
/workspace/mochi/tests/machine/x/c/group_by_having.c:35:27: note: expected ‘int’ but argument is of type ‘list_bigItem’
   35 | static void _json_int(int v) { printf("%d", v); }
      |                       ~~~~^

   1: #include <stdio.h>
